Configure API URL with environment variable for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+# Backend Server (for Railway deployment)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 PORT=3001
+
+# Frontend (for local development)
+REACT_APP_API_URL=http://localhost:3001
+
+# Frontend (for production - set in Vercel dashboard)
+# REACT_APP_API_URL=https://your-app.railway.app
